# design-patterns

./: .gitignore  README.md
command-pattern/: CMakeLists.txt  Makefile  README.md  character.h  command-pattern  command.cpp  command.h  command.plantuml  commandmanager.h  main.cpp
strategy-pattern/: '  CMakeLists.txt  Makefile  README.md  main.cpp  strategy.cpp  strategy.h  strategy.plantuml  textprocessor.h
